--- a/style.css
+++ b/style.css
@@ -1,89 +1,88 @@
 html {
-    font-size: 22px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 22px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 body {
-    padding: 1rem;
-    background-color: dimgrey;
+  padding: 1rem;
+  background-color: dimgrey;
 }
 a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 .box {
-    padding: 1rem;
-    height: 12rem;
-    transition: transform .2s;
-  }
+  padding: 1rem;
+  height: 12rem;
+  transition: transform 0.2s;
+}
 .box:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .boxes {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .boximage {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .boxtext {
-    text-align: center;
-    font-size: 30px;
-    text-shadow: 0 0 50px #ffffff, 0 0 20px #0549c6;
-    font-style: bold;
-    text-decoration: none;
+  text-align: center;
+  font-size: 30px;
+  text-shadow: 0 0 50px #ffffff, 0 0 20px #0549c6;
+  font-style: bold;
+  text-decoration: none;
 }
 
 #aboutme {
-    text-align: center;
-    background-image:url(aboutme.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    
+  text-align: center;
+  background-image: url(aboutme.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 #twitch {
-    text-align: center;
-    background-image:url(twitch.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  text-align: center;
+  background-image: url(twitch.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 #youtube {
-    text-align: center;
-    background-image:url(youtube.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  text-align: center;
+  background-image: url(youtube.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 #discord {
-    text-align: center;
-    background-image:url(discord.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  text-align: center;
+  background-image: url(discord.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 #instagram {
-    text-align: center;
-    background-image:url(instagram.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  text-align: center;
+  background-image: url(instagram.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 #twitter {
-    text-align: center;
-    background-image:url(twitter.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  text-align: center;
+  background-image: url(twitter.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
